--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Index.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Index.cshtml
@@ -1,10 +1,79 @@
 ﻿@page
-@model IndexModel
+@model LoginOgInfo.Pages.IndexModel
 @{
-    ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/core.css" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <title>Startside</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+    <ul class="navbar-nav">
+        @if (SignInManager.IsSignedIn(User))
+        {
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+            </li>
+            <li class="nav-item">
+                <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
+                    <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                </form>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Opret ny adminkonto</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/AdminNavi">Rediger i Databasen</a>
+            </li>
+        }
+        else
+        {
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        </li>
+        }
+    </ul>
+
+    <div class="container h-100">
+        <div class="row">
+            <div class="float-left col novi logo3">
+                <img src="\Pictures/novi.png" />
+            </div>
+        </div>
+
+
+        <div class="row top-buffer">
+            <div class="col indextext headline novifont text-center">
+                <p>
+                    Velkommen til Novi 8
+                </p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col headline novifont text-center">
+                <p>
+                    Mangler du hjælp til noget?
+                </p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-4 offset-4">
+                <button type="button" class="startbutton novifont noviyellow" 
+                        onclick="window.location.href = '/oversigt'">
+                    Tryk her
+                </button>
+            </div>
+        </div>
+    </div>
+</body>
