--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Details.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Details.cshtml
@@ -5,6 +5,10 @@
     ViewData["Title"] = "Details";
 }
 
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
 <h1>Details</h1>
 
 <div>
@@ -43,7 +47,10 @@
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.VirksomhederInfo.ID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
-</div>
+@if (SignInManager.IsSignedIn(User))
+{
+    <div>
+        <a asp-page="./Edit" asp-route-id="@Model.VirksomhederInfo.ID">Edit</a> |
+        <a asp-page="./Index">Back to List</a>
+    </div>
+}
