--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/wwwroot/css/core.css
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/wwwroot/css/core.css
@@ -47,9 +47,7 @@ body {
     display: block;
     border-radius: 15%;
     box-shadow: 7px 7px 5px grey;
-    font-size: 100%;
-    padding: 3vh;
-    height: 95px;
+    padding: 2% 2% 2% 2%;
     border-style: none;
 }
 
@@ -68,12 +66,10 @@ body {
     background: none;
     outline: none;
     width: 100%;
-    margin: 0% 0% 0% 0.5%;
     border-style: solid;
     border-radius: 10px;
-    background-color: #8D9092;
-    border-color: #8D9092;
-    color: white;
+    border-color: rgb(102, 109, 119);
+    background-color: rgb(102, 109, 119);
 }
 
 button:hover {
@@ -86,22 +82,9 @@ button:hover {
     color: #8d9092;
 }
 
-.homeicon {
-    width: 50px;
-    height: 50px;
-    margin: 9% 0% 0% 40%;
-}
-
-.backbutton {
-    width: 50px;
-    height: 50px;
-    margin: 9% 0% 1% 2%
-}
-
-.forwardbutton {
-    width: 50px;
-    height: 50px;
-    margin: 9% 0% 1% -45%
+.icons{
+    height: 90%;
+    width: 30%;
 }
 
 .orangeline {
@@ -185,7 +168,7 @@ button:hover {
 
 .startbutton {
     border-style: none;
-    padding: 2vh 4vh 2vh 2vh;
+    padding: 2vh 2vh 2vh 2vh;
     display: inline-block;
 }
 
@@ -204,7 +187,6 @@ button:hover {
 
 .normaltext {
     font-size: 140%;
-    margin-right: 20px;
 }
 
 .logo1 {
@@ -216,10 +198,9 @@ button:hover {
 
 .logo2 {
     display: block;
-    height: 100%;
+    height: 150%;
     border-color: orange;
-    width: 15%;
-    margin-top: 5%;
+    width: 50%;
 }
 
 .map {
