--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Personinfo.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Personinfo.cshtml
@@ -28,31 +28,31 @@
 
         <div class="row">
             <div class="col-3">
-                <img src="\Pictures/hus.png" onclick="window.location.href = '/personinfo'" class="icons img-fluid mr-1" ;>
+                <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
                 <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
                 <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
             </div>
             <div class="col-9">
-                <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont novidgrey" ;>
+                <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont" ;>
             </div>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-12 ">
-            <hr class="col-11 mb-4 orangeline" />
+        <div class="col-12">
+            <hr class="mb-4 orangeline noviyellow" />
         </div>
     </div>
 
     <div class="row">
-        <div class="col-2 text-center">
-            <button type="button" class="btn btn-primary btn-lg novifont noviyellow startbutton mb-5 sidebox btn-block" onclick="window.location.href = '/index'">
+        <div class="col-2 text-center novifont">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/index'">
                 Oversigtskort
             </button>
-            <button type="button" class="btn btn-primary btn-lg novifont noviyellow startbutton mb-5 sidebox btn-block" onclick="window.location.href = '/privacy'">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/parkering'">
                 Parkering
             </button>
-            <button type="button" class="btn btn-primary btn-lg novifont noviyellow startbutton mb-5 sidebox btn-block" onclick="window.location.href = '/privacy'">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
                 Faq
             </button>
         </div>
@@ -66,8 +66,8 @@
                         tlf: 99887766
                     </p>
                 </div>
-                <div class="col-6 mb-5 mt-5">
-                    <img alt="Novi Logo" src="/Pictures/novi.png" class="float-right" />
+                <div class="col-6">
+                    <img alt="Novi Logo" src="/Pictures/novi.png" class="float-right logo2" />
                 </div>
             </div>
             <div class="row">
@@ -75,14 +75,15 @@
                     <p class="findsomethingboxheader novifont">
                         Sådan finder du Jens Jensen
                     </p><p class="normaltext novifont">
-                        1. Gå til venstre ved kantinen
+                        1. Gå til venstre ved kantinen.
                         <br>
-                        2. Følg trappen op til anden sal
+                        2. Følg trappen op til anden sal.
+                        <br>
+                        3. Tag anden dør på højre hånd.
                     </p>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 </body>
 
