--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/wwwroot/css/core.css
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/wwwroot/css/core.css
@@ -1,26 +1,111 @@
-﻿::placeholder { /* Firefox, Chrome, Opera */
-    color: white;
+﻿.button {
+    border-style: none;
+    display: inline-block;
+    padding: 2vh 2vh 2vh 2vh;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
 }
-    
 
-* {
-    box-sizing: border-box;
+button:hover {
+    background-color: rgb(141, 144, 146);
+    color: white;
 }
 
 body {
-    background-color: #E6E9ED;
+    background-color: rgb(230, 233, 237);
 }
 
-.novifont {
-    font-family: Oswald;
-    color: #8d9092;
+.companybox {
+    border-style: none;
+    border-radius: 20%;
+    box-shadow: 7px 7px 5px grey;
+    display: block;
+    font-size: 100%;
+    padding: 3vh;
+    text-align: center;
+    
+}
+
+
+.faqquestions {
+    font-size: 120%;
+    margin-left: 3%;
+    margin-top: 1%;
+}
+
+
+
+.findsomethingbox {
+    border-color: rgb(243, 180, 27);
+    border-style: solid;
+    display: block;
+    font-size: 120%;
+    padding-bottom: 30vh;
+}
+
+
+.findsomethingboxheader {
+    font-size: 140%;
+    font-weight: bold;
+}
+
+.headline {
+    font-size: 380%;
+    color: rgb(102,109,119);
+}
+
+
+.icons{
+    height: 90%;
+    width: 30%;
 }
 
 
 .indextext {
-    margin-top: 15%;
     margin-left: 3%;
+    margin-top: 15%;
+    
 }
+
+
+.logo1 {
+    height: 35%;
+    margin-top: 8%;
+    padding-left: 40%;
+    width: 80%;
+    
+}
+
+.logo2 {
+    margin-top: 4vh;
+    margin-bottom: 6vh;
+}
+.logo3 {
+    margin-bottom: 6vh;
+    margin-top: 6vh;
+}
+
+.map {
+    margin-left: 38%;
+    margin-top: 15%;
+}
+
+
+.normaltext {
+    font-size: 180%;
+}
+
+.novi {
+    height: 10%;
+    width: 10%;
+}
+
+.novifont {
+    color: rgb(102, 109, 119);
+    font-family: Oswald;
+}
+
 
 .novigreen {
     background-color: rgb(162,215,100);
@@ -38,178 +123,71 @@ body {
     color: white;
 }
 
-.noviyellow {
-    background-color: rgb(243,180,27);
-    color: white;
-}
-
-.sidebox {
-    display: block;
-    border-radius: 15%;
-    box-shadow: 7px 7px 5px grey;
-    padding: 2% 2% 2% 2%;
-    border-style: none;
-}
-
-.companybox {
-    display: block;
-    border-radius: 20%;
-    box-shadow: 7px 7px 5px grey;
-    font-size: 100%;
-    padding: 3vh;
-    text-align: center;
-    border-style: none;
-}
-
-
-.searchbar {
-    background: none;
-    outline: none;
-    width: 100%;
-    border-style: solid;
-    border-radius: 10px;
-    border-color: rgb(102, 109, 119);
-    background-color: rgb(102, 109, 119);
-}
-
-button:hover {
-    color: white;
-    background-color: rgb(141,144,146);
-}
-
-.headline {
-    font-size: 380%;
-    color: #8d9092;
-}
-
-.icons{
-    height: 90%;
-    width: 30%;
-}
-
-.orangeline {
-    border-top: 5px solid #F3BB1B;
-    margin: 1% 0% 0% 0%;
-}
-
-.col1 {
-    width: 90%;
-    height: 100%;
-    border: solid 4px;
-    border-bottom: none;
-    border-color: #f3bb1b;
-}
-
-.col2 {
-    width: 90%;
-    height: 100%;
-    border: solid 4px;
-    border-top: none;
-    border-bottom: none;
-    border-color: #f3bb1b;
-}
-
-.col3 {
-    width: 90%;
-    height: 100%;
-    border: solid 4px;
-    border-top: none;
-    border-bottom: none;
-    border-color: #f3bb1b;
-}
-
-.col4 {
-    width: 90%;
-    height: 400%;
-    border: solid 4px;
-    border-top: none;
-    border-color: #f3bb1b;
-}
-
-.faqquestions {
-    margin-top: 1%;
-    margin-left: 3%;
-    font-size: 120%;
-}
-
-.parkingfont {
-    font-size: 17px;
-    text-align: center;
-    margin-top: 7%
-}
-
-.parkinginput {
-    width: 80%;
-    text-align: center;
-    border-style: solid;
-    margin-left: 33%;
-    padding: 1% 1% 1% 1%;
-}
-
-.parkingbutton {
-    box-shadow: 7px 7px 5px grey;
-    border-radius: 15%;
-    width: 18%;
-    height: 35%;
-    margin-left: 39%;
-    margin-top: -10%;
-    border-style: none;
-    }
-
-.novi {
-    height: 10%;
-    width: 10%;
-}
-
 .noviperson {
     height: 5vh;
     width: 5vh;
 }
 
-.startbutton {
+.noviyellow {
+    background-color: rgb(243,180,27);
+    color: white;
+}
+
+.orangeline {
+    border-top: 5px solid;
+    margin: 1% 0% 0% 0%;
+    color: rgb(243, 180, 27);
+}
+
+.parkingbutton {
+    border-radius: 15%;
     border-style: none;
-    padding: 2vh 2vh 2vh 2vh;
-    display: inline-block;
-}
-
-.findsomethingbox {
-    border-color: orange;
-    display: block;
-    border-style: solid;
-    font-size: 120%;
-    padding-bottom: 100%;
-}
-
-.findsomethingboxheader {
-    font-weight: bold;
-    font-size: 140%;
-}
-
-.normaltext {
-    font-size: 140%;
-}
-
-.logo1 {
-    margin-top: 8%;
-    padding-left: 40%;
-    width: 80%;
+    box-shadow: 7px 7px 5px grey;
     height: 35%;
+    margin-left: 39%;
+    margin-top: -10%;
+    width: 18%;
+}
+    
+.parkingfont {
+    font-size: 17px;
+    margin-top: 7%;
+    text-align: center;
 }
 
-.logo2 {
-    display: block;
-    height: 150%;
-    border-color: orange;
-    width: 50%;
+.parkinginput {
+    border-style: solid;
+    margin-left: 33%;
+    padding: 1% 1% 1% 1%;
+    text-align: center;
+    width: 80%;
 }
 
-.map {
-    margin-top: 15%;
-    margin-left: 38%;
+
+.searchbar {
+    background: none;
+    background-color: rgb(102, 109, 119);
+    border-color: rgb(102, 109, 119);
+    border-style: solid;
+    outline: none;
+    width: 100%;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    padding: 1% 1% 1% 1%;
+    color: white;
+    font-size: 150%;
 }
 
-.logo3 {
-    margin-top: 8vh;
-    margin-bottom: 10vh;
 
+.sidebox {
+    border-radius: 15%;
+    box-shadow: 7px 7px 5px grey;
+    border-style: none;
+    display: inline-block;
+    padding: 2vh 2vh 2vh 2vh;
+}
+
+::-webkit-input-placeholder {
+    color: white;
 }
