--- a/Interaktiv receptionist/LoginOgInfoHerAnders/LoginOgInfo/Pages/MedarbejderPage/Index.cshtml
+++ b/Interaktiv receptionist/LoginOgInfoHerAnders/LoginOgInfo/Pages/MedarbejderPage/Index.cshtml
@@ -13,8 +13,9 @@
 
 <form>
     <p>
-
-        Title: <input type="text" asp-for="SearchString" />
+        Søg efter navnet på en medarbejder: 
+        <br />
+        <input type="text" asp-for="SearchString" />
         <input type="submit" value="Filter" />
     </p>
 </form>
