--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Firmainfo.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Firmainfo.cshtml
@@ -29,8 +29,8 @@
         <div class="row">
             <div class="col-3">
                 <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
-                <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
-                <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
+                <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1);" class="icons img-fluid mr-1" />
+                <img src="\Pictures/højre.png" onclick="javascript:history.go(+1);" class="icons img-fluid" />
             </div>
             <div class="col-9">
                 <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont" ;>
