--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Oversigt.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Oversigt.cshtml
@@ -62,17 +62,17 @@
         <div class="col-10">
             <div class="row">
                 <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow" onclick="window.location.href = '/index'">
+                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/index'">
                         Oversigtskort
                     </button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow" onclick="window.location.href = '/parkering'">
+                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/parkering'">
                         Parkering
                     </button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow" onclick="window.location.href = '/faq'">
+                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/faq'">
                         Faq
                     </button>
                 </div>
@@ -80,51 +80,51 @@
 
             <div class="row">
                 <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow" onclick="window.location.href = '/index'">
+                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/index'">
                         Oversigtskort
                     </button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow" onclick="window.location.href = '/parkering'">
+                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/parkering'">
                         Parkering
                     </button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow" onclick="window.location.href = '/faq'">
+                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/faq'">
                         Faq
                     </button>
                 </div>
             </div>
             <div class="row">
                 <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow" onclick="window.location.href = '/index'">
+                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/index'">
                         Oversigtskort
                     </button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow" onclick="window.location.href = '/parkering'">
+                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/parkering'">
                         Parkering
                     </button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow" onclick="window.location.href = '/faq'">
+                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/faq'">
                         Faq
                     </button>
                 </div>
             </div>
             <div class="row">
                 <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow" onclick="window.location.href = '/index'">
+                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/index'">
                         Oversigtskort
                     </button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow" onclick="window.location.href = '/parkering'">
+                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/parkering'">
                         Parkering
                     </button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow" onclick="window.location.href = '/faq'">
+                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/faq'">
                         Faq
                     </button>
                 </div>
