--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Parkering.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Parkering.cshtml
@@ -4,82 +4,71 @@
     ViewData["Title"] = "Parkering";
 }
 
-    <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="\css/core.css" />
-        <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="\css/core.css" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
-        <title>Oversigtskort</title>
+    <title>@ViewData["title"]</title>
 
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    </head>
+</head>
 
 <body>
-    <!-- This div contains the site-->
-    <div class="container-fluid h-100">
-        <div>
-            <h1 class="col-8 offset-3 headline novifont">@ViewData["Title"]</h1>
-        </div>
+    <div class="container-fluid">
 
-        <!-- This div contains the icons and search field-->
         <div class="row">
-            <div class="col-1 align-self-start">
-                <img src="\Pictures/hus.png" class="homeicon" ;>
-            </div>
-            <div class="col-1 align-self-center">
-                <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="backbutton" />
-            </div>
-            <div class="col-1 align-self-center center">
-                <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="forwardbutton" />
-            </div>
-            <div class="col-8 mb-2 align-self-center mt-2">
-                <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont">
+            <div class="col">
+                <p class="headline novifont text-center">
+                    @ViewData["Title"]
+                </p>
             </div>
         </div>
 
-        <!-- This div contains the orange through and through line-->
         <div class="row">
-            <hr class="col-11 mb-4 orangeline" />
+            <div class="col-3">
+                <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
+                <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
+                <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
+            </div>
+            <div class="col-9">
+                <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont" ;>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <hr class="mb-4 orangeline noviyellow" />
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-2 text-center novifont">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/index'">
+                Oversigtskort
+            </button>
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/parkering'">
+                Parkering
+            </button>
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
+                Faq
+            </button>
         </div>
 
-        <!-- This div contains the buttons on left hand side-->
-        <div class="row">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href = '/privacy'">Oversigtskort</button>
-            <div class="col-9 offset-1">
-                <div class="col1">
-                    <p class="parkingfont novifont">Hvis du ønsker at parkere hos Novi 8, så indtast venligst din nummerplade, for at begynde:</p>
+        <div class="col-10">
+            <div class="row">
+                <div class="col-12 findsomethingbox">
+                    <p class="normaltext novifont text-center">
+                        For at begynde din parkering, så skal du indtaste din nummerplade
+                    </p>
+
                 </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href = '/privacy'">Parkering</button>
-            <div class="col-9 offset-1">
-                <div class="col2">
-                    <div class="col-8 mb-2 align-self-center">
-                        <input type="text" placeholder="XN XX XXX" class="parkinginput novidgrey">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href = '/privacy'">Ofte stillede spørgsmål</button>
-            <div class="col-9 offset-1">
-                <div class="col3">
-                    <button type="button" class="col-4 mb-5 offset-4 text-center parkingbutton novifont noviyellow" onclick="window.location.href = '/privacy'">Registrer</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-2 mb-5 "></div>
-            <div class="col-9 offset-1">
-                <div class="col4"></div>
             </div>
         </div>
     </div>
 </body>
+
 
