--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Index.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Index.cshtml
@@ -5,62 +5,112 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.VirksomhederInfo[0].Navn)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.VirksomhederInfo[0].CVR)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.VirksomhederInfo[0].Medarbejdere)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.VirksomhederInfo[0].Lokale)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.VirksomhederInfo[0].Findvej)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.VirksomhederInfo[0].ID)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.VirksomhederInfo) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Navn)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CVR)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Medarbejdere)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Lokale)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Findvej)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ID)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
+<h1>Index</h1>
+@if (SignInManager.IsSignedIn(User))
+{
+    <p>
+        <a asp-page="Create">Create New</a>
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.VirksomhederInfo[0].Navn)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.VirksomhederInfo[0].CVR)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.VirksomhederInfo[0].Medarbejdere)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.VirksomhederInfo[0].Lokale)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.VirksomhederInfo[0].Findvej)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.VirksomhederInfo[0].ID)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.VirksomhederInfo)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Navn)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CVR)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Medarbejdere)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Lokale)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Findvej)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ID)
+                    </td>
+                    <td>
+                        <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
+                        <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
+                        <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
-    </tbody>
-</table>
+
+else
+{
+
+<div class="container">
+    <div class="row">
+        @foreach (var item in Model.VirksomhederInfo.Take(3))
+        {
+            <div class="col">
+                <a asp-page="./Details" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Navn)</a>
+            </div>
+        }
+    </div>
+
+    <div class="row">
+        @foreach (var item in Model.VirksomhederInfo.Skip(3).Take(3))
+        {
+            <div class="col">
+                <a asp-page="./Details" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Navn)</a>
+            </div>
+        }
+    </div>
+
+    <div class="row">
+        @foreach (var item in Model.VirksomhederInfo.Skip(6).Take(3))
+        {
+            <div class="col">
+                <a asp-page="./Details" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Navn)</a>
+            </div>
+        }
+    </div>
+
+    <div class="row">
+        @foreach (var item in Model.VirksomhederInfo.Skip(9).Take(3))
+        {
+            <div class="col">
+                <a asp-page="./Details" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Navn)</a>
+            </div>
+        }
+    </div>
+
+</div>
+}
