--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/MedarbejderPage/Index.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/MedarbejderPage/Index.cshtml
@@ -10,29 +10,39 @@
 <p>
     <a asp-page="Create">Create New</a>
 </p>
+
+<form>
+    <p>
+        Søg efter navnet på en medarbejder: 
+        <br />
+        <input type="text" asp-for="SearchString" />
+        <input type="submit" value="Filter" />
+    </p>
+</form>
+
 <table class="table">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.MedarbejderInfo[0].Navn)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MedarbejderInfo[0].Virksomhed)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MedarbejderInfo[0].Lokale)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MedarbejderInfo[0].Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MedarbejderInfo[0].Stilling)
-            </th>
-            <th></th>
-        </tr>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.MedarbejderInfo[0].Navn)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.MedarbejderInfo[0].Virksomhed)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.MedarbejderInfo[0].Lokale)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.MedarbejderInfo[0].Email)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.MedarbejderInfo[0].Stilling)
+        </th>
+        <th></th>
+    </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.MedarbejderInfo) {
+    @foreach (var item in Model.MedarbejderInfo) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Navn)
@@ -55,6 +65,6 @@
                 <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
