--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/ParkeringPage/Create.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/ParkeringPage/Create.cshtml
@@ -5,9 +5,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Register nummerplade</h1>
 
-<h4>ParkeringsInfo</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
