--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Index.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Index.cshtml
@@ -73,7 +73,7 @@
         <div class="row">
             <div class="col-12 mt-5 text-center">
                 <button type="button" class="btn btn-primary btn-lg novifont noviyellow button text-center"
-                        onclick="window.location.href = '/personinfo'">
+                        onclick="window.location.href = '/oversigt'">
                     Tryk her
                 </button>
             </div>
