--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Personinfo.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Personinfo.cshtml
@@ -16,68 +16,72 @@
 </head>
 
 <body>
-    <!-- This div contains the site-->
-    <div class="container-fluid h-100">
-        <div>
-            <h1 class="col-8 offset-3 headline novifont">@ViewData["Title"]</h1>
-        </div>
+    <div class="container-fluid">
 
-        <!-- This div contains the icons and search field-->
         <div class="row">
-            <div class="col-1 align-self-start">
-                <img src="\Pictures/hus.png" class="homeicon" ;>
-            </div>
-            <div class="col-1 align-self-center">
-                <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="backbutton" />
-            </div>
-            <div class="col-1 align-self-center center">
-                <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="forwardbutton" />
-            </div>
-            <div class="col-8 mb-2 align-self-center mt-2">
-                <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont">
-            </div>
-        </div>
-
-        <!-- This div contains the orange through and through line-->
-        <div class="row">
-            <hr class="col-11 mb-4 orangeline" />
-        </div>
-
-        <!-- This div contains the buttons on left hand side-->
-        <div class="row">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href = '/privacy'">Oversigtskort</button>
-
-            <div class="col-5 offset-1 novifont">
-                <p class="normaltext">
-                    Navn: Jen Jenssen<br />
-                    Lokale: 0.1.95<br />
-                    tlf: 99887766
+            <div class="col">
+                <p class="headline novifont text-center">
+                    @ViewData["Title"]
                 </p>
             </div>
-            <div class="col">
-                <img src="\Pictures/novi.png" class="logo1">
+        </div>
+
+        <div class="row">
+            <div class="col-3">
+                <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
+                <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
+                <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
+            </div>
+            <div class="col-9">
+                <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont" ;>
             </div>
         </div>
-        <div class="row">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href = '/privacy'">Parkering</button>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <hr class="mb-4 orangeline noviyellow" />
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-2 text-center novifont">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/index'">
+                Oversigtskort
+            </button>
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/parkering'">
+                Parkering
+            </button>
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
+                Faq
+            </button>
         </div>
 
-        <div class="row align-items align-self-start-center h-100">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href = '/privacy'">FAQ</button>
-
-            <!--This div contains info on how to find the person-->
-            <div class="col-8 offset-1 findsomethingbox novifont">
-
-                <div class="col-8 mb-5">
-                    <p class="findsomethingboxheader">Sådan finder du Jens Jensen</p>
-                    1. Gå til venstre ved kantinen
-                    <br>
-                    2. Følg trappen op til anden sal
+        <div class="col-10">
+            <div class="row">
+                <div class="col-6">
+                    <p class="normaltext novifont">
+                        Navn: Jen Jenssen<br />
+                        Lokale: 0.1.95<br />
+                        tlf: 99887766
+                    </p>
                 </div>
-                <div class="row mb-5 justify-content-center">
-                    <img class="logo2" src="\Pictures/novi.png">
+                <div class="col-6">
+                    <img alt="Novi Logo" src="/Pictures/novi.png" class="float-right logo2" />
                 </div>
-
+            </div>
+            <div class="row">
+                <div class="col-12 findsomethingbox mt-4 mb-5">
+                    <p class="findsomethingboxheader novifont">
+                        Sådan finder du Jens Jensen
+                    </p><p class="normaltext novifont">
+                        1. Gå til venstre ved kantinen.
+                        <br>
+                        2. Følg trappen op til anden sal.
+                        <br>
+                        3. Tag anden dør på højre hånd.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
